fix(ui): ace editor does not use `monospace` as default; unaligned confs

--- a/src/csf/configserver.css
+++ b/src/csf/configserver.css
@@ -2860,9 +2860,8 @@ button.btn-update
 }
 
 /*
-	ACE Editor  › Indent guides
+	ACE Editor › Indent guides
 */
-
 
 .ace-tomorrow .ace_indent-guide
 {
@@ -2872,4 +2871,13 @@ button.btn-update
 .ace-tomorrow .ace_indent-guide-active
 {
 	background: var(--ace-indent-guide-active) right repeat-y;
+}
+
+/*
+	Ace Editor › Parent
+*/
+
+div#editor
+{
+    font-family: monospace !important;
 }
